Fixed the contributors row overflowing.

--- a/static/global.scss
+++ b/static/global.scss
@@ -1,5 +1,9 @@
 @import url("https://rsms.me/inter/inter.css");
 
+//@mixin lightAcrylicLayerBackground {
+//	background: linear-gradient(0deg, rgba(239, 239, 239, 0.3), rgba(239, 239, 239, 0.3)), rgba(239, 239, 239, 0.95) url("https://modernflyouts-community.github.io/assets/noise.png") center/196px repeat;
+//}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -17,6 +21,32 @@ html, body {
 	box-shadow: 0 0 0 2px var(--text-primary) !important;
 }
 
+#main-inner-container,
+#main-left-container {
+	flex: 1 1 auto;
+}
+
+#community-section {
+	overflow: hidden;
+}
+
+.acrylic-material {
+	overflow: hidden;
+	backdrop-filter: blur(60px) saturate(5);
+
+	&::before {
+		position: absolute;
+
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		content: "";
+		opacity: 0.8;
+		background: linear-gradient(0deg, rgba(239, 239, 239, 0.3), rgba(239, 239, 239, 0.3)), rgba(239, 239, 239, 0.95) url("https://modernflyouts-community.github.io/assets/noise.png") center/196px repeat;
+		background-blend-mode: normal, color, luminosity;
+	}
+}
+
 $accent: #0078d4;
 $accentHover: #005ca3;
 $accentActive: #006bbd;
@@ -30,9 +60,5 @@ $darkBackgroundPrimary: #000;
 $darkBackgroundSecondary: #0f0f0f;
 $darkTextPrimary: #f1f1f1;
 $darkTextSecondary: #a6a6a6;
-
-@mixin lightAcrylicLayerBackground {
-	background: linear-gradient(0deg, rgba(239, 239, 239, 0.3), rgba(239, 239, 239, 0.3)), rgba(239, 239, 239, 0.95) url("https://modernflyouts-community.github.io/assets/noise.png") center/196px repeat;
-}
 
 $darkAcrylicLayer: linear-gradient(0deg, rgba(45, 45, 45, 0.2), rgba(45, 45, 45, 0.2)), rgba(45, 45, 45, .95) url("https://modernflyouts-community.github.io/assets/noise.png") center/196px repeat;
